--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
     <string name="app_name">Reminder</string>
     <string name="fragment_task_list_tv_empty">Press a button below to add new Reminder!</string>
-<string name="add_new_task_toolbar_name">Add new task</string>
+    <string name="add_new_task_toolbar_name">Add new task</string>
+    <string name="main_activity_toolbar_title_task_list">Task list</string>
+    <string name="main_activity_toolbar_title_undone_task">Undone Task</string>
+    <string name="main_activity_toolbar_title_weather">Weather</string>
+    <string name="main_activity_toolbar_title_location">Location</string>
+
 </resources>
